# GeoTask

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  README.zh-CN.md  SECURITY.md  public-files.sha256.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  operator_proposal.yml
.github/workflows/: ci.yml
.release/: README.md  hash_public_export.py  public-manifest.yaml  scan_public_export.py  verify_public_export.py
docs/: architecture.md  cli_usage.md  design_principles.md  eval_spec.md  format_spec.md  geotask_yaml_schema.md  normalizer_v0_2_design.md  open_core_commercial_runtime_boundary.md  open_source_boundary.md  operator-guide.md  operator_registry.md  product_architecture_v0_1.md
docs/architecture_decisions/: ADR-001-core-runtime-domain-pack.md  ADR-002-private-runtime-boundary.md  ADR-003-domain-pack-plugin-contract.md  ADR-004-patent-and-open-source-boundary.md
examples/: README.md  basic_distance.yaml  deepseek_output_sample.txt  eval_expected_result.yaml  geotask_core_lite.yaml  route_zone_intersection.yaml
examples/core/: assertions_expected_results.yaml  minimal_valid.yaml  time_altitude_overlap.yaml  v1_minimal_distance.yaml  (+1 more)
tests/: test_architecture_boundaries.py  test_cli_foundation_commands.py  test_cli_inspect.py  test_core_examples_v0_2.py  test_evaluator.py  test_normalizer.py  test_normalizer_v0_2.py  test_operator_registry.py  test_ops.py  test_ops_v0_3.py  test_parser.py  test_parser_diagnostics.py  test_runner.py  test_runtime_contracts_v0_1.py  test_verifier.py
(+39 files in other folders)
