[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geotask-core"
version = "0.1.0"
description = "GeoTask Core: lightweight spatial task representation for LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "GeoTask Contributors" },
]
keywords = ["spatial", "llm", "task-representation", "geospatial", "ai", "geotask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/stpku/GeoTask"
Repository = "https://github.com/stpku/GeoTask"
Issues = "https://github.com/stpku/GeoTask/issues"
Documentation = "https://github.com/stpku/GeoTask/tree/main/docs"
Changelog = "https://github.com/stpku/GeoTask/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.5",
]

[project.scripts]
geotask = "geotask_core.cli:main"
stir = "geotask_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
